added day3 part2

--- a/src/AdventOfCode.csproj
+++ b/src/AdventOfCode.csproj
@@ -23,6 +23,9 @@
     <None Update="Day3\Example.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day3\ExamplePart2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Day3\PuzzleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
