--- a/src/AdventOfCode.csproj
+++ b/src/AdventOfCode.csproj
@@ -107,6 +107,9 @@
     <None Update="Day17\Example.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day17\ExamplePart2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Day17\PuzzleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
