fixed bug; answer incorrect

--- a/src/AdventOfCode.csproj
+++ b/src/AdventOfCode.csproj
@@ -122,6 +122,9 @@
     <None Update="Day19\Example.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day19\Part2Example1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Day19\PuzzleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
