created models and classes

--- a/src/AdventOfCode.csproj
+++ b/src/AdventOfCode.csproj
@@ -134,6 +134,12 @@
     <None Update="Day1\PuzzleInput.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day20\Example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Day20\PuzzleInput.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Day2\Example.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
